--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -66,7 +66,6 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
   &.ng-hide {
     transition: none;
   }
-;
 
   &.md-cornered {
     border-radius: 0;
@@ -186,5 +185,11 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
   &:last-child {
     border-right-width: 1px;
     border-radius: 0px 2px 2px 0px;
+  }
+}
+@media screen and (-ms-high-contrast: active) {
+  .md-button.md-raised,
+  .md-button.md-fab {
+    border: 1px solid #fff;
   }
 }
