--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -62,3 +62,9 @@ md-dialog {
   }
 
 }
+
+@media screen and (-ms-high-contrast: active) {
+  md-dialog {
+    border: 1px solid #fff;
+  }
+}
