--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -155,3 +155,9 @@ md-optgroup {
     padding-left: $baseline-grid + $select-option-padding;
   }
 }
+
+@media screen and (-ms-high-contrast: active) {
+  .md-select-backdrop {
+    background-color: transparent;
+  }
+}
